--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Learn JSON</title>
 </head>
 <body>
+    <div class="users">
+    </div>
+    <script>
+        /* Things you shout know
+            -> Json and javascript Objects : see here https://prnt.sc/1325vyl
+                1. Json needs double qoute in key attribute (ex. "name" : "Jaime")
+                2. Javascript objects no needs double quote in key attribute (ex. name : "Jaime")
+                note: different format but same result 
 
-    
+                Getting/Setting values in javascript objects: see here https://prnt.sc/1325zby
+                    1. dot notation (ex. myCar.model)
+                    2. single or double quoted (ex. myCar["model"])
+        */
+    </script>
+
+    <script src="fetch.js"></script>
+    <!-- <script src="objects/object-literal.js"></script> -->
 </body>
 </html>
