--- a/index.html
+++ b/index.html
@@ -19,10 +19,23 @@
                 Getting/Setting values in javascript objects: see here https://prnt.sc/1325zby
                     1. dot notation (ex. myCar.model)
                     2. single or double quoted (ex. myCar["model"])
+
+            ----------------------------------------------------------------
+
+            ->JSON.parse() and JSON.stringify()
+                JSON.parse - converts JSON string to JSON object. We can get data if its object now
+                JSON.stringify - converts JSON object to JSON string to lightweight the objects.
+
+            ----------------------------------------------------------------
+
+
         */
     </script>
 
-    <script src="fetch.js"></script>
+    
+    <script src="xhr.js"></script> 
+    <!-- <script src="fetch.js"></script> -->
+    <script src="objects/render-html.js"></script>
     <!-- <script src="objects/object-literal.js"></script> -->
 </body>
 </html>
