fetch with mapping

--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
         */
     </script>
 
-    
-    <script src="xhr.js"></script> 
+    <!-- Diffrent type of requesting data from server-->
+    <!-- <script src="xhr.js"></script> -->
     <!-- <script src="fetch.js"></script> -->
-    <script src="objects/render-html.js"></script>
+    <script src="fetch-map.js"></script>
+
+    <!-- Render html  for displaying user without map js -->
+    <!-- <script src="objects/render-html.js"></script> -->
+
+    <!-- Render html  for displaying user with map js -->
+    <script src="objects/display-user.js"></script>
+
+    <!-- Understading objects -->
     <!-- <script src="objects/object-literal.js"></script> -->
 </body>
 </html>
